# poe2-overlay

./: .gitignore  AGENTS.md  CONTEXT.md  DESIGN.md  PRODUCT.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: windows-check.yml
docs/: INSTALL.md
docs/adr/: 0001-clean-build-rust-tauri-layer-shell-overlay.md  0002-kde-global-shortcut-hotkey.md  0003-overlay-dismissal-safety-corner-surface-hide-shortcut.md  0004-pricing-core-warm-client-event-contract.md  0005-waystone-danger-check-on-price-check.md  0006-regex-cheatsheet-clipboard-write.md  0007-ondemand-keyboard-focus-typed-filters.md
docs/plans/: current-task.md
docs/plans/active/: 0001-mvp-price-check-overlay.md  0002-windows-port.md
docs/plans/archive/: 0001-mvp-price-check-overlay.md
docs/research/: INSTALL.md  RESEARCH.md
docs/templates/: adr-full.md  adr-minimal.md  plan.md
packaging/: 99-poe2-overlay-uinput.rules  install.sh
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cheatsheet.rs  clipboard.rs  danger.rs  hotkey.rs  lib.rs  main.rs  overlay.rs  trade.rs
src-tauri/src/trade/: gear.rs  mod.rs  ninja.rs  parse.rs  stats.rs
