[package]
name = "poe2-overlay"
version = "0.1.0"
description = "Wayland-native Path of Exile 2 trade overlay for KDE Plasma"
authors = ["André Lund <olund.dev@pm.me>"]
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
# `_lib` suffix keeps the lib name distinct from the bin (Windows quirk, see
# rust-lang/cargo#8519). Harmless on Linux.
name = "poe2_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"        # open wiki/poedb links from the overlay
tauri-plugin-single-instance = "2"  # T3: KDE Ctrl+Alt+D shortcut forwards `--price-check` here (ADR-0002)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Overlay + input + trade foundation (see ADR-0001; wired in plan T2-T4) ---
# Declared here as the architecture of record; uncomment per task. The
# layer-shell + GTK deps need system libs: `pacman -S gtk-layer-shell gtk3`.
#
# T2: promote the GTK window to a wlr-layer-shell OVERLAY surface. Versions track
# Tauri 2.11's gtk-rs generation (gtk/gdk 0.18); gtk-layer-shell 0.8 binds gtk 0.18.
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"                     # gtk::ApplicationWindow handle from Tauri's window
# v0_6: KeyboardMode::OnDemand binding (libgtk-layer-shell >= 0.6; system is 0.10.1).
gtk-layer-shell = { version = "0.8", features = ["v0_6"] }

# T3 (ADR-0002): the KDE Ctrl+Alt+D shortcut triggers the copy; we synthesize it
# via uinput and read the X11 clipboard. No /dev/input reads — only /dev/uinput.
evdev = "0.12"                   # uinput virtual device (Ctrl+C synth); /dev/uinput ACL, no `input` group
x11-clipboard = "0.9"            # read the X11 CLIPBOARD selection (XWayland/Proton writes there)

# T4 pricing core: warm async client for the GGG trade2 API + poe.ninja (ADR-0004).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
urlencoding = "2"                # percent-encode the league into the trade2 search path segment
regex = "1"                      # item-text + stat-line parsing (level/quality/tier/value extraction)
